--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build Quartz
-        run: npx quartz build
+        run: npx quartz build -d content/content
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
